#1495 Changed one TemplateSetConfiguration.java file to a decorator to avoid confusing because there where two classes with the same name in different packages